apps/oxfmt/tests/snapshots/config_file_explicit@oxfmt.snap
---
source: apps/oxfmt/tests/tester.rs
---
########## 
arguments: --check --config ./fmt.json
working directory: tests/fixtures/config_file
----------
Checking formatting...
nested/deep/test.js (<variable>ms)

Format issues found in above 1 files. Run without `--check` to fix.
Finished in <variable>ms on 1 files using 1 threads.
----------
CLI result: FormatMismatch
----------

########## 
arguments: --check --config ./fmt.jsonc
working directory: tests/fixtures/config_file
----------
Checking formatting...
nested/deep/test.js (<variable>ms)

Format issues found in above 1 files. Run without `--check` to fix.
Finished in <variable>ms on 1 files using 1 threads.
----------
CLI result: FormatMismatch
----------

########## 
arguments: --check --config NOT_EXISTS.json
working directory: tests/fixtures/config_file
----------
Failed to load configuration file.
Failed to read config <cwd>/tests/fixtures/config_file/NOT_EXISTS.json: File not found
----------
CLI result: InvalidOptionConfig
----------
