apps/oxfmt/tests/snapshots/config_ignore_patterns@oxfmt.snap
---
source: apps/oxfmt/tests/tester.rs
---
########## 
arguments: --check
working directory: tests/fixtures/config_ignore_patterns
----------
Checking formatting...

Expected at least one target file
----------
CLI result: NoFilesFound
----------

########## 
arguments: --check --config fmtrc.jsonc
working directory: tests/fixtures/config_ignore_patterns
----------
Checking formatting...

Expected at least one target file
----------
CLI result: NoFilesFound
----------
