apps/oxfmt/tests/snapshots/exclude_nested_paths_with_dot_2@oxfmt.snap
---
source: apps/oxfmt/tests/tester.rs
---
########## 
arguments: --check ./foo !**/bar/error.js
working directory: tests/fixtures/exclude_nested
----------
Checking formatting...

All matched files use the correct format.
Finished in <variable>ms on 2 files using 1 threads.
----------
CLI result: FormatSucceeded
----------

########## 
arguments: --check ./foo !**/error.js
working directory: tests/fixtures/exclude_nested
----------
Checking formatting...

All matched files use the correct format.
Finished in <variable>ms on 2 files using 1 threads.
----------
CLI result: FormatSucceeded
----------

########## 
arguments: --check ./foo !**/bar/*
working directory: tests/fixtures/exclude_nested
----------
Checking formatting...

All matched files use the correct format.
Finished in <variable>ms on 1 files using 1 threads.
----------
CLI result: FormatSucceeded
----------

########## 
arguments: --check ./foo !foo/bar/error.js
working directory: tests/fixtures/exclude_nested
----------
Checking formatting...

All matched files use the correct format.
Finished in <variable>ms on 2 files using 1 threads.
----------
CLI result: FormatSucceeded
----------

########## 
arguments: --check ./foo !foo/bar
working directory: tests/fixtures/exclude_nested
----------
Checking formatting...

All matched files use the correct format.
Finished in <variable>ms on 1 files using 1 threads.
----------
CLI result: FormatSucceeded
----------
