apps/oxfmt/tests/snapshots/ignore_symlink@oxfmt.snap
---
source: apps/oxfmt/tests/tester.rs
---
########## 
arguments: --check
working directory: tests/fixtures/symlink_dirs
----------
Checking formatting...
foo/file.js (<variable>ms)
root.js (<variable>ms)

Format issues found in above 2 files. Run without `--check` to fix.
Finished in <variable>ms on 2 files using 1 threads.
----------
CLI result: FormatMismatch
----------
