apps/oxfmt/tests/snapshots/multiple_files@oxfmt.snap
---
source: apps/oxfmt/tests/tester.rs
---
########## 
arguments: --check simple.js arrow.js
working directory: tests/fixtures/multiple_files
----------
Checking formatting...
arrow.js (<variable>ms)
simple.js (<variable>ms)

Format issues found in above 2 files. Run without `--check` to fix.
Finished in <variable>ms on 2 files using 1 threads.
----------
CLI result: FormatMismatch
----------

########## 
arguments: --check
working directory: tests/fixtures/multiple_files
----------
Checking formatting...
app.tsx (<variable>ms)
arrow.js (<variable>ms)
component.jsx (<variable>ms)
simple.js (<variable>ms)
simple.ts (<variable>ms)
types.d.ts (<variable>ms)

Format issues found in above 6 files. Run without `--check` to fix.
Finished in <variable>ms on 6 files using 1 threads.
----------
CLI result: FormatMismatch
----------

########## 
arguments: --check .
working directory: tests/fixtures/multiple_files
----------
Checking formatting...
app.tsx (<variable>ms)
arrow.js (<variable>ms)
component.jsx (<variable>ms)
simple.js (<variable>ms)
simple.ts (<variable>ms)
types.d.ts (<variable>ms)

Format issues found in above 6 files. Run without `--check` to fix.
Finished in <variable>ms on 6 files using 1 threads.
----------
CLI result: FormatMismatch
----------

########## 
arguments: --check ./
working directory: tests/fixtures/multiple_files
----------
Checking formatting...
app.tsx (<variable>ms)
arrow.js (<variable>ms)
component.jsx (<variable>ms)
simple.js (<variable>ms)
simple.ts (<variable>ms)
types.d.ts (<variable>ms)

Format issues found in above 6 files. Run without `--check` to fix.
Finished in <variable>ms on 6 files using 1 threads.
----------
CLI result: FormatMismatch
----------

########## 
arguments: --check !*.{ts,tsx}
working directory: tests/fixtures/multiple_files
----------
Checking formatting...
arrow.js (<variable>ms)
component.jsx (<variable>ms)
simple.js (<variable>ms)

Format issues found in above 3 files. Run without `--check` to fix.
Finished in <variable>ms on 3 files using 1 threads.
----------
CLI result: FormatMismatch
----------
